Hotfixes Console e Instruction Correção dos prints no Console que não funcionavam dependendo da versão e correção de um array em Instruction.